--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
         <div class="homework">
             <div class="homework_1">
                 <h2>домашнее задание 1</h2>
+                <p>
+                    Задание: Добавьте плавный переход, чтобы при наведении на .box ширина .point изменилась на 100%
+                </p>
+                <br>
                 <div class="box">
                     <div class="point"></div>
                 </div>
             </div>
             <div class="homework_2">
                 <h2>домашнее задание 2</h2>
+                <p>
+                    Задание: Добавьте плавный переход для трех свойств: transform (изменение масштаба на +10%), background-color (#e0e0e0) и box-shadow (уровень blur увеличится до 30px).
+                </p>
+                <br>
                 <div class="product-card">
                     <div class="product-title">Товар</div>
                 </div>
             </div>
             <div class="homework_3">
                 <h2>домашнее задание 3</h2>
+                <p>
+                    Задание: Добавьте плавный переход, где при наведении непрозрачность элемента должна упасть на 50%. Далее поработайте с бесконечной анимацией: установите ключевые кадры для 0% и 100%, где rotate(0deg) изменится на rotate(360deg). Если вы выполнили это задание, то добавьте кадр на 50% (середина пути), где угол будет равен 180deg и добавится изменение масштаба scale(1.5), чтобы увидеть, как изменится анимация.
+                </p>
+                <br>
                 <div class="box-2">
                 </div>
             </div>
@@ -34,8 +46,8 @@
     </div>
 </body>
 <footer class="footer">
-    <button>
-        <img src="images/GitHab.svg" href="">
+    <button class="button">
+        <a href="https://github.com/AlexGukov44/animation_CSS"><img class="icons" src="images/GitHab.svg">
     </button>
 </footer>
 </html>
