--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </body>
 <footer class="footer">
     <button class="button">
-        <a href="https://github.com/AlexGukov44/animation_CSS"><img class="icons" src="images/GitHab.svg">
+        <a href="https://github.com/AlexGukov44/animation_CSS" target="_blank"><img class="icons" src="images/GitHab.svg">
     </button>
 </footer>
 </html>
